--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node index.ts",
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && node index.js",
     "build": "rimraf ./build && tsc"
   },
   "keywords": [],
