--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node index.ts",
-    "start": "npm run build && node index.js",
+    "start": "npm run build && nodemon index.js",
     "build": "rimraf ./build && tsc"
   },
   "keywords": [],
@@ -15,7 +15,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "@types/sqlite3": "^3.1.11",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
