--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node index.ts",
-    "start": "npm run build && nodemon index.js",
+    "start": "@/&& nodemon index.js",
     "build": "rimraf ./build && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "@types/sqlite3": "^3.1.11",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "@types/nodemailer": "^6.4.15",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
